[gd_scene load_steps=17 format=3 uid="uid://cxa74vtjk8jfd"]

[ext_resource type="Script" path="res://raven/tools/sparrow_to_spriteframes.gd" id="1_7u426"]
[ext_resource type="Shader" path="res://assets/shaders/texture_overlay.gdshader" id="2_51y5b"]
[ext_resource type="Texture2D" uid="uid://bam3j5gq83wmr" path="res://assets/images/menus/menuBGBlue.png" id="3_ufdwh"]
[ext_resource type="FontFile" uid="uid://blgtnxif1eksg" path="res://assets/fonts/funkin.ttf" id="4_b4mj3"]
[ext_resource type="Theme" uid="uid://bh3fs6l4n44y4" path="res://assets/data/themes/tools_theme.tres" id="4_jbg5x"]

[sub_resource type="Gradient" id="Gradient_ct5b5"]
interpolation_mode = 2
colors = PackedColorArray(0.172791, 0.121765, 0.234375, 1, 0.585114, 0.410156, 0.65625, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5r0gq"]
gradient = SubResource("Gradient_ct5b5")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wrh23"]
shader = ExtResource("2_51y5b")
shader_parameter/mix_factor = 1.0
shader_parameter/overlay = SubResource("GradientTexture2D_5r0gq")

[sub_resource type="LabelSettings" id="LabelSettings_cske1"]
font = ExtResource("4_b4mj3")
font_size = 48
outline_size = 16
outline_color = Color(0.109804, 0.0666667, 0.203922, 1)
shadow_color = Color(0.0666667, 0.0117647, 0.117647, 0.580392)
shadow_offset = Vector2(0, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k0cmr"]
bg_color = Color(0.2, 0.165, 0.227, 0.75)
corner_radius_top_left = 16
corner_radius_top_right = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sv6vt"]
bg_color = Color(0.109804, 0.0823529, 0.129412, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.266667, 0.227451, 0.286275, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7s37j"]
bg_color = Color(0.172549, 0.133333, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.34902, 0.301961, 0.372549, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pw4ef"]
bg_color = Color(0.137255, 0.101961, 0.164706, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.262745, 0.32549, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjt1g"]
bg_color = Color(0.137255, 0.101961, 0.164706, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.262745, 0.32549, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1wy3"]
bg_color = Color(0.2, 0.165, 0.227, 0.75)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 16.0

[sub_resource type="LabelSettings" id="LabelSettings_jwy14"]
font = ExtResource("4_b4mj3")
outline_size = 8
outline_color = Color(0.186667, 0.105, 0.35, 1)
shadow_color = Color(0.0666667, 0.0117647, 0.117647, 0.580392)
shadow_offset = Vector2(0, 3)

[node name="sparrow_to_spriteframes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7u426")
metadata/_edit_lock_ = true

[node name="background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_wrh23")
position = Vector2(640, 360)
texture = ExtResource("3_ufdwh")

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 62.0
grow_horizontal = 2
theme = ExtResource("4_jbg5x")
text = "Sparrow (XML) to SpriteFrames"
label_settings = SubResource("LabelSettings_cske1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -652.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_jbg5x")
theme_override_styles/panel = SubResource("StyleBoxFlat_k0cmr")

[node name="convert" type="Button" parent="panel"]
layout_mode = 0
offset_left = 544.0
offset_top = 548.0
offset_right = 736.0
offset_bottom = 612.0
mouse_default_cursor_shape = 2
text = "Convert"

[node name="framerate" type="SpinBox" parent="panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 548.0
offset_right = 168.0
offset_bottom = 612.0
min_value = 1.0
max_value = 1000.0
value = 24.0
rounded = true
alignment = 1
suffix = "FPS"

[node name="looping" type="CheckBox" parent="panel"]
layout_mode = 0
offset_left = 204.0
offset_top = 548.0
offset_right = 328.0
offset_bottom = 612.0
theme_override_styles/normal = SubResource("StyleBoxFlat_sv6vt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7s37j")
theme_override_styles/hover = SubResource("StyleBoxFlat_pw4ef")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_kjt1g")
text = "Looping"
alignment = 1

[node name="offsets" type="CheckBox" parent="panel"]
layout_mode = 0
offset_left = 364.0
offset_top = 548.0
offset_right = 488.0
offset_bottom = 612.0
theme_override_styles/normal = SubResource("StyleBoxFlat_sv6vt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7s37j")
theme_override_styles/hover = SubResource("StyleBoxFlat_pw4ef")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_kjt1g")
button_pressed = true
text = "Offsets"
alignment = 1

[node name="pick" type="Button" parent="panel"]
layout_mode = 0
offset_left = 1048.0
offset_top = 548.0
offset_right = 1240.0
offset_bottom = 612.0
mouse_default_cursor_shape = 2
text = "Pick Spritesheet"

[node name="file" type="Label" parent="panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 48.0
offset_top = 32.0
offset_right = -44.0
offset_bottom = 64.0
grow_horizontal = 2
theme = ExtResource("4_jbg5x")
theme_override_styles/normal = SubResource("StyleBoxFlat_d1wy3")
text = "N / A"
label_settings = SubResource("LabelSettings_jwy14")
vertical_alignment = 1

[node name="file_dialog" type="FileDialog" parent="."]
title = "Open a Spritesheet"
initial_position = 1
size = Vector2i(640, 480)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
filters = PackedStringArray("*.xml")
show_hidden_files = true
use_native_dialog = true

[connection signal="pressed" from="panel/convert" to="." method="_import"]
[connection signal="value_changed" from="panel/framerate" to="." method="_set_framerate"]
[connection signal="toggled" from="panel/looping" to="." method="_set_looped"]
[connection signal="toggled" from="panel/offsets" to="." method="_set_offsets"]
[connection signal="pressed" from="panel/pick" to="file_dialog" method="popup_centered"]
[connection signal="file_selected" from="file_dialog" to="." method="_set_file"]
